--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
 
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<div id="login">
-		<a href="loginn.php">
+		<a href="log.php">
 			<div id="loginn">All ready have account ? Login</div>
 	</div>
 	<div id="ad">
