--- a/Home.html
+++ b/Home.html
@@ -21,8 +21,7 @@
 
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<div id="login">
-		<a href="log.php">
-			<div id="loginn">All ready have account ? Login</div>
+		<a href="log.php"><div id="loginn">All ready have account ? Login</div></a>
 	</div>
 	<div id="ad">
 		<a href="admin_login.php"> Login as Admin !
