--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</div>
 	<div id="p1">
 		<p>
-			It is a platform for a university/college/school/Institution on which all admitted student can
+			jhfjhfjhfkhjfkhfhjfhfkfjhgfhgfghfhgfhgfghfjhghIt is a platform for a university/college/school/Institution on which all admitted student can
 			register himself/herself and can get all of the information such as ID
 			card/Result/Attendence/Syllabus/Faculty/Fees/Exam Registration/Exam Admit card/study material and many more
 			ionformation will be provided as per requirements.
