--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<div id="login">
-		<a href="log.php">
+		<a href="Home.html">
 			<div id="loginn">All ready have account ? Login</div>
 	</div>
 	<div id="ad">
